--- a/src/App.css
+++ b/src/App.css
@@ -33,20 +33,20 @@
 }
 
 .dataTitle {
-  border: 0.01em solid #123200;
+  border: 0.01em solid #2d320077;
   box-shadow:
-    inset -0.1em -0.01em 0.4em 0.3em rgba(74, 74, 4, 0.26),
-    inset 0.1em 0.1em 0.5em 0.2em rgba(43, 108, 2, 0.309),
+    -0em 0.1em 0.1em 0em rgba(0, 0, 0, 0.503),
+    inset 0.1em 0.1em 0.3em 0 rgba(0, 0, 0, 0.503),
     rgba(183, 228, 178, 0.06) 0em 0.125em 0.0625em,
-    rgba(130, 167, 18, 0.09) 0em 0.25em 0.125em,
+    rgba(130, 167, 18, 0.043) 0em 0.25em 0.125em,
     rgba(155, 193, 19, 0.09) 0em 0.5em 0.25em,
-    rgba(138, 186, 7, 0.09) 0em 1em 0.5em,
-    rgba(155, 206, 15, 0.09) 0em 2em 1em;
+    rgba(138, 186, 7, 0.047) 0em 1em 0.5em,
+    rgba(155, 206, 15, 0.052) 0em 2em 1em;
   margin-top: 0.5em;
-  padding: 0.06em 0.3em;
-  text-shadow: 0.05em 0.05em 0.06em #ededec;
-  background-color: #b4de7a4f;
-  border-radius: 0.3em;
+  padding: 0.04em 0.2em;
+  text-shadow: 0.05em 0.05em 0.06em #ffffff;
+  background-color: rgba(198, 237, 144, 0.091);
+  border-radius: 0.4em;
 }
 
 .dataBorder {
@@ -55,7 +55,7 @@
   align-items: center;
   font-size: 3em;
   font-weight: bold;
-  color: rgb(75, 65, 65);
+  color: rgb(75, 66, 5);
 }
 
 .tableContainerData {
