--- a/src/components/AkdemyButton/AkdemyButton.css
+++ b/src/components/AkdemyButton/AkdemyButton.css
@@ -1,11 +1,12 @@
 .akdemyButton {
     background-color: #90a729fd;
     color: #ffffff;
-    padding: 0.6em 0.9em;
+    padding: 0.59em 0.8em;
     border: 0.01em solid rgb(9, 71, 9);
     border-radius: 1em;
     font-size: 1em;
     cursor: pointer;
+    text-shadow: 0.04em 0.04em 0.04em  #062c00;
     transition: transform 0.2s ease, box-shadow 0.2s ease;
     box-shadow:
         rgba(21, 61, 9, 0.532) 0.04em 0.04em 0.5em 0.2em inset,
