--- a/src/containers/ConvocationDetail/ConvocationDetail.css
+++ b/src/containers/ConvocationDetail/ConvocationDetail.css
@@ -1,22 +1,18 @@
 .convocationDetail {
-    margin-top: 1.2em;
-    padding: 0 2em 2em;
-    border: 0.5em solid #69730d39;
+    padding: 0 2em 1em;
     border-radius: 1em;
-    max-width: 21.5em;
-    box-shadow:
-    rgba(0, 0, 0, 0.17) 0em -0.4375em 1.5625em 0em inset,
-    rgba(0, 0, 0, 0.15) 0em -0.25em 1.875em 0em inset,
-    rgba(0, 0, 0, 0.1) 0em -1.9375em 2.5em 0em inset,
-    rgba(0, 0, 0, 0.06) 0em 0.125em 0.0625em,
-    rgba(0, 0, 0, 0.09) 0em 0.25em 0.125em,
-    rgba(0, 0, 0, 0.09) 0em 0.5em 0.25em,
-    rgba(0, 0, 0, 0.09) 0em 1em 0.5em,
-    rgba(0, 0, 0, 0.09) 0em 2em 1em;
-    
+    max-width: 23em;
+    margin-top: 2em;
 }
+
+.borderProgramInfo {
+    margin-top: 1em;
+    border: 0.1em solid #a4b13039;
+    border-radius: 0.5em;
+}
+
 .programInfo {
-    border: 0.1em solid #749b7381;
+    background-color: #b4de7a19;
     box-shadow: inset 1em 0.4em 0.7em 0.1em rgba(0, 0, 0, 0.503);
     border-radius: 0.5em;
     display: flex;
@@ -29,10 +25,10 @@
 .detailItem {
     margin: 0.7em;
     text-align: start;
-    
 }
 
-.titleDetail{
+.titleDetail {
+    font-weight: bold;
+    text-shadow: 0.05em 0.05em 0.06em #ffffff;
     text-align: center;
-    text-shadow: 0.05em 0.05em 0.06em rgba(0, 0, 0, 0.5);
 }
