--- a/src/containers/ProgramDetail/ProgramDetail.css
+++ b/src/containers/ProgramDetail/ProgramDetail.css
@@ -1,33 +1,49 @@
-/* .DetailProgram {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    min-width: 100vw;
-} */
-
 .detailProgram {
     box-shadow: inset 0 0 2em #98a84e92;
-
-    margin-top: 3.4em; 
+    margin-top: 3.3em; 
     border-radius: 2em;
     padding: 0.8em; 
     text-align: center;
     color: #834016;
-    max-width: 100em; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
     width: 90%; 
-    /* overflow: hidden;  */
 }
 
 .detailProgram img {
     border-radius: 2em;
+    max-height: 100%;
     max-width: 100%;
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
+    transition: transform 0.3s ease;
+}
+.buttonsDetailPage{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .detailProgram h2 {
-    font-size: 1.8em; 
+    font-weight: bold;
+    text-shadow: 0.04em 0.04em 0.04em #ff6600a2;
+    font-size: 1.9em; 
     margin-bottom: 0.5em;
+}
+
+.arrowButtonDetail{
+    border-radius: 0.5em;
+    cursor: pointer;
+    margin: 0 1em;
+    height: 1.7em;
+    width: 1.7em;
+    border: solid 0.1em green;
+    text-shadow: 0.04em 0.04em 0.04em #59fb44c3;
+    color: #d35501;
+    box-shadow:
+    rgba(65, 126, 4, 0.17) 0em -0.4375em 1.5625em 0em inset,
+    rgba(12, 142, 3, 0.15) 0em -0.25em 1.875em 0em inset,
+    rgba(16, 252, 126, 0.1) 0em -1.9375em 2.5em 0em inset;    
 }
 
 .detailProgram h4 {
